Fix default form input / select styling for dark mode

--- a/src/assets/css/form.css
+++ b/src/assets/css/form.css
@@ -1,11 +1,11 @@
 @utility form-input {
 	@apply block w-full rounded-md px-3 py-2 text-grey-700 shadow-xs outline-hidden;
-	@apply dark:bg-transparent;
+	@apply dark:bg-transparent dark:text-white;
 }
 
 @utility form-select {
 	@apply block w-full appearance-none rounded-md py-2 ps-3 pe-[2.5em] text-grey-700 shadow-xs outline-hidden;
-	@apply dark:bg-transparent;
+	@apply dark:bg-transparent dark:text-white;
 
 	background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 20 20'%3e%3cpath stroke='%2364748b' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M6 8l4 4 4-4'/%3e%3c/svg%3e");
 	background-position: right 0.5rem center;
